--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: Build and Deploy
 env:
-  CI: false
+  CI: true
 on:
   push:
     branches:
@@ -24,4 +24,3 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.SECRET_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: build # The folder the action should deploy.
-
