--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-blog-github",
-  "homepage": "https://saadpasta.github.io/react-blog-github",
+  "homepage": "https://coachrye.github.io/react-blog-github",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
